# libMAFSA

./: CMakeLists.txt  ChangeLog  README  libMASFA.spec
debian/: changelog  control  files
include/MAFSA/: adapter.h  automaton.h  daciuk.h  daciuk.hpp  daciuk.tcc  internal.h  pool.h  pool.hpp  pool.tcc  stack.h  stack.hpp
include/MAFSA/adapter/: wla_utf8.h
src/MAFSA/: automaton.c  daciuk.c  pool.c  stack.c
src/MAFSA/adapter/: wla_utf8.c
src/test/: exls_test.c  exls_test.cpp  unit_adapter.c  unit_adapter.h  unit_result.out  unit_test.c  unit_test.cpp
