CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (libMAFSA)

SET (LIBMAFSA_VERSION 0.3.16)
SET (LIBMAFSA_RPM_RELEASE 16)

SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -pipe -O3 -fomit-frame-pointer -funroll-loops -DNDEBUG -Wall")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -Wno-deprecated")

IF (NOT CYGWIN)
  SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
ENDIF ()

SET (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
SET (CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
SET (CMAKE_FIND_LIBRARY_PREFIXES ${CMAKE_STATIC_LIBRARY_PREFIX})

INCLUDE_DIRECTORIES (include)

SET (SMAFSA src/MAFSA/automaton.c)
AUX_SOURCE_DIRECTORY (src/MAFSA/adapter SMAFSA_ADAPTER)

ADD_LIBRARY (MAFSA STATIC ${SMAFSA} ${SMAFSA_ADAPTER})

SET (SMAFSA_EXLS src/test/exls_test.cpp)
SET (SMAFSA_UNIT src/test/unit_test.cpp src/test/unit_adapter.c)

ADD_EXECUTABLE (MAFSA_exls ${SMAFSA_EXLS})
ADD_EXECUTABLE (MAFSA_unit ${SMAFSA_UNIT})

TARGET_LINK_LIBRARIES (MAFSA_exls MAFSA)
TARGET_LINK_LIBRARIES (MAFSA_unit MAFSA)

SET (LIBDIR lib)
#IF (${CMAKE_SIZEOF_VOID_P} EQUAL 8)
#  SET (LIBDIR lib64)
#ENDIF (${CMAKE_SIZEOF_VOID_P} EQUAL 8)

INSTALL (TARGETS MAFSA DESTINATION ${LIBDIR})
INSTALL (DIRECTORY include/MAFSA DESTINATION include PATTERN ".*" EXCLUDE)

# test from coda (TODO make this more general)
ADD_EXECUTABLE (dic_compiler test/dic_compiler.cpp test/dic_adapter.c)
TARGET_LINK_LIBRARIES (dic_compiler MAFSA)
ADD_EXECUTABLE (dic_finder test/dic_finder.c test/dic_adapter.c)
TARGET_LINK_LIBRARIES (dic_finder MAFSA)

